--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,5 @@
-sentence-transformers==2.2.0
-tensorflow==2.11.0
-numpy==1.24.0
+numpy
+torch==2.5.1
+transformers==4.46.3
+sentence_transformers
+tensorflow_intel
